--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "build": "tsc && docker build -t bref/local-api-gateway .",
-    "docker-publish": "npm run build && docker push bref/local-api-gateway"
+    "docker-publish": "npm run build && docker push bref/local-api-gateway",
+    "test": "vitest"
   },
   "author": "Matthieu Napoli",
   "license": "MIT",
@@ -22,7 +23,8 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "vitest": "^0.29.2"
   },
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.216.0",
