--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.216.0",
     "express": "^4.18.2",
+    "express-queue": "^0.0.13",
     "node-fetch": "^3.3.0"
   }
 }
