--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@types/aws-lambda": "^8.10.109",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "aws-sdk-client-mock": "^2.1.1",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.0",
+    "supertest": "^6.3.3",
     "typescript": "^4.9.3",
     "vitest": "^0.29.2"
   },
