--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.216.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-queue": "^0.0.13",
     "node-fetch": "^3.3.0"
