--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.109",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
@@ -33,6 +34,7 @@
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.216.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-queue": "^0.0.13",
     "node-fetch": "^3.3.0"
