--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc && docker buildx build --load -t bref/local-api-gateway .",
-    "docker-publish": "npm run build && docker buildx build --push --platform linux/amd64,linux/arm64 -t bref/local-api-gateway .",
+    "start": "NODE_PATH=./dist node dist/index.js",
+    "build": "tsc -p .",
+    "dev": "ts-node src/index.ts",
     "lint": "eslint .",
     "test": "vitest"
   },
@@ -27,6 +28,7 @@
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.0",
     "supertest": "^6.3.3",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.3",
     "vitest": "^0.29.2"
   },
